# cf-invariants-anchor

./: .gitignore  .tool-versions  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cf-invariants-anchor-ai/: Cargo.toml  README.md
crates/cf-invariants-anchor-ai/src/: lib.rs
crates/cf-invariants-anchor-ai/tests/: live_run_capture_roundtrip.rs
crates/cf-invariants-anchor-cli/: Cargo.toml  README.md
crates/cf-invariants-anchor-cli/src/: main.rs
crates/cf-invariants-anchor-core/: Cargo.toml  README.md
crates/cf-invariants-anchor-core/src/: lib.rs
crates/cf-invariants-anchor-emit/: Cargo.toml  README.md
crates/cf-invariants-anchor-emit/src/: lib.rs
crates/cf-invariants-anchor-idl/: Cargo.toml  README.md
crates/cf-invariants-anchor-idl/src/: lib.rs
crates/cf-invariants-anchor-report/: Cargo.toml  README.md
crates/cf-invariants-anchor-report/src/: lib.rs
crates/cf-invariants-anchor-suggest/: Cargo.toml  README.md
crates/cf-invariants-anchor-suggest/src/: lib.rs
docs/: ai-disclosure.md  architecture.md
examples/kamino-class-lending/: README.md
examples/kamino-class-lending/emitted/: invariant_cumulative_yield_monotonic.rs  invariant_set_admin_rejects_unauthorized.rs  invariant_withdraw_rejects_unauthorized.rs
examples/kamino-class-lending/scorecards/: suggest_ai.json  suggest_heuristic.json
findings/: LIVE_VALIDATION_PENDING.md
findings/admin_ref_clean/: scorecard.expected.md
findings/admin_ref_planted/: scorecard.expected.md
findings/ai_suggester_run_2026-06-03/: README.md  audit_log.json  prompt.txt  raw_response.json  surface.json  tagged_candidates.json  transport_envelope.json
findings/counter_ref_clean/: scorecard.expected.md
findings/counter_ref_planted/: scorecard.expected.md
findings/kamino_lending_ref_clean/: scorecard.expected.md
findings/kamino_lending_ref_planted/: scorecard.expected.md
findings/vault_ref_clean/: scorecard.expected.json  scorecard.expected.md  scorecard.md
findings/vault_ref_planted/: scorecard.expected.json  scorecard.expected.md
prompts/: invariant_suggestion_v1.txt
references/admin_ref/fuzz/admin_ref/: Cargo.toml
references/admin_ref/idls/: admin_ref.json
references/admin_ref/programs/admin_ref/: Cargo.toml
references/admin_ref/programs/admin_ref/src/: lib.rs
references/admin_ref_planted/fuzz/admin_ref/: Cargo.toml
references/admin_ref_planted/fuzz/admin_ref/src/: main.rs
references/admin_ref_planted/idls/: admin_ref.json
references/admin_ref_planted/programs/admin_ref/: Cargo.toml
references/admin_ref_planted/programs/admin_ref/src/: lib.rs
references/counter_ref/fuzz/counter_ref/: Cargo.toml
references/counter_ref/idls/: counter_ref.json
references/counter_ref/programs/counter_ref/: Cargo.toml
references/counter_ref/programs/counter_ref/src/: lib.rs
references/counter_ref_planted/fuzz/counter_ref/: Cargo.toml
references/counter_ref_planted/fuzz/counter_ref/src/: main.rs
references/counter_ref_planted/idls/: counter_ref.json
references/counter_ref_planted/programs/counter_ref/: Cargo.toml
references/counter_ref_planted/programs/counter_ref/src/: lib.rs
references/kamino_lending_ref/programs/kamino_lending_ref/: Cargo.toml
references/kamino_lending_ref/programs/kamino_lending_ref/src/: lib.rs
references/kamino_lending_ref_planted/fuzz/kamino_lending_ref/: Cargo.toml
references/kamino_lending_ref_planted/fuzz/kamino_lending_ref/src/: main.rs
references/kamino_lending_ref_planted/idls/: kamino_lending_ref.json
references/kamino_lending_ref_planted/programs/kamino_lending_ref/: Cargo.toml
references/kamino_lending_ref_planted/programs/kamino_lending_ref/src/: lib.rs
references/vault_ref/fuzz/vault_ref/: Cargo.toml
references/vault_ref/programs/vault_ref/: Cargo.toml
references/vault_ref/programs/vault_ref/src/: lib.rs
references/vault_ref_planted/fuzz/vault_ref/src/: main.rs
references/vault_ref_planted/idls/: vault_ref.json
references/vault_ref_planted/programs/vault_ref/: Cargo.toml
references/vault_ref_planted/programs/vault_ref/src/: lib.rs
scripts/: run_phase0_harness.sh
