[package]
name = "cf-invariants-anchor-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI: ingest Anchor IDL, suggest invariants (heuristic or AI), emit Crucible / Trident fuzz fixtures."
readme = "README.md"
keywords = ["solana", "anchor", "fuzzing", "invariants", "crucible"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "cf-invariants-anchor"
path = "src/main.rs"

[dependencies]
cf-invariants-anchor-core    = { path = "../cf-invariants-anchor-core",    version = "0.1.1" }
cf-invariants-anchor-idl     = { path = "../cf-invariants-anchor-idl",     version = "0.1.1" }
cf-invariants-anchor-suggest = { path = "../cf-invariants-anchor-suggest", version = "0.1.1" }
cf-invariants-anchor-emit    = { path = "../cf-invariants-anchor-emit",    version = "0.1.1" }
cf-invariants-anchor-report  = { path = "../cf-invariants-anchor-report",  version = "0.1.1" }
cf-invariants-anchor-ai      = { path = "../cf-invariants-anchor-ai",      version = "0.1.1" }
serde_json = { workspace = true }
clap       = { workspace = true }
anyhow     = { workspace = true }
tokio      = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
# Compiles the LiveAnthropicTransport path into the CLI. Default build
# (and CI's workspace-tests) leaves it OFF so a green badge requires
# no API key and no network access. Operators that want to fire live
# Claude calls build with `--features live-ai` and set
# `CF_INVARIANTS_ANCHOR_AI_LIVE=1` + `ANTHROPIC_API_KEY` at run time.
live-ai = ["cf-invariants-anchor-ai/live"]
