[package]
name = "cf-invariants-anchor-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared types for cf-invariants-anchor: contract surface, candidate invariants, scorecard."
keywords = ["solana", "anchor", "fuzzing", "invariants"]
categories = ["development-tools::testing"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
