[package]
name = "cf-invariants-anchor-emit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Emit Crucible-compatible invariant fixtures (#[fuzz_fixture] + #[invariant_test]) from candidates."

[dependencies]
cf-invariants-anchor-core = { path = "../cf-invariants-anchor-core" }
