[package]
name = "cf-invariants-anchor-idl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Anchor IDL ingestion: parses Anchor 0.30 / Codama-style IDL JSON into a typed contract surface."

[dependencies]
cf-invariants-anchor-core = { path = "../cf-invariants-anchor-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
