[package]
name = "cf-invariants-anchor-suggest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Ranked invariant suggestion over a parsed Anchor surface. Phase 0: balance_conservation."

[dependencies]
cf-invariants-anchor-core = { path = "../cf-invariants-anchor-core" }
serde = { workspace = true }
serde_json = { workspace = true }
