[package]
name = "cf-invariants-anchor-suggest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Ranked invariant suggestion over a parsed Anchor surface. Phase 0: balance_conservation, monotonic_accounting, access_control."
readme = "README.md"
keywords = ["solana", "anchor", "fuzzing", "invariants"]
categories = ["development-tools::testing"]

[dependencies]
cf-invariants-anchor-core = { path = "../cf-invariants-anchor-core", version = "0.1.1" }
serde = { workspace = true }
serde_json = { workspace = true }
