[package]
name = "admin_ref_fuzz"
version = "0.1.0"
edition = "2021"
description = "Crucible fuzz harness for admin_ref — access_control class (cf-invariants-anchor)."
license = "Apache-2.0"

[workspace]

[dependencies]
# Pinned to upstream Crucible v0.2.0; see references/vault_ref/fuzz/vault_ref
# for the path-dep layout note.
crucible-fuzzer       = { path = "../../../../../crucible/crates/crucible-fuzzer" }
crucible-test-context = { path = "../../../../../crucible/crates/crucible-test-context" }
anchor-lang = "1.0.1"
arbitrary = { version = "1", features = ["derive"] }
ctrlc = "3.4"
libafl = { version = "0.15.1", features = ["std", "cli", "prelude"] }
libafl_bolts = { version = "0.15.1", features = ["std"] }
admin_ref = { path = "../../programs/admin_ref", features = ["no-entrypoint"] }
solana-keypair = "3.0"
solana-pubkey = "3.0"
solana-signer = "3.0"

[[bin]]
name = "invariant_test"
path = "src/main.rs"

[features]
invariant_withdraw_rejects_unauthorized = []
