[package]
name = "counter_ref"
version = "0.1.0"
edition = "2021"
description = "cf-invariants-anchor reference: minimal Anchor vault with lifetime_deposited ratchet (monotonicity class — planted twin breaks the ratchet)."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter_ref"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []

[dependencies]
# Pinned to upstream Crucible v0.2.0 workspace
# (https://github.com/asymmetric-research/crucible/blob/v0.2.0/Cargo.toml).
anchor-lang = "1.0.1"
