[package]
name = "kamino_lending_ref_fuzz"
version = "0.1.0"
edition = "2021"
description = "Crucible fuzz harness for kamino_lending_ref (emitted by cf-invariants-anchor)."
license = "Apache-2.0"

[workspace]

[dependencies]
# Pinned to upstream Crucible v0.2.0. Path deps assume the Crucible
# clone lives at `../../../../../crucible` per the vault_ref pattern.
crucible-fuzzer       = { path = "../../../../../crucible/crates/crucible-fuzzer" }
crucible-test-context = { path = "../../../../../crucible/crates/crucible-test-context" }
anchor-lang = "1.0.1"
arbitrary = { version = "1", features = ["derive"] }
ctrlc = "3.4"
libafl = { version = "0.15.1", features = ["std", "cli", "prelude"] }
libafl_bolts = { version = "0.15.1", features = ["std"] }
kamino_lending_ref = { path = "../../programs/kamino_lending_ref", features = ["no-entrypoint"] }
solana-keypair = "3.0"
solana-pubkey = "3.0"
solana-signer = "3.0"

[[bin]]
name = "invariant_test"
path = "src/main.rs"

[features]
invariant_total_assets_conservation = []
