[package]
name = "vault_ref_fuzz"
version = "0.1.0"
edition = "2021"
description = "Crucible fuzz harness for vault_ref (emitted by cf-invariants-anchor)."
license = "Apache-2.0"

[workspace]

[dependencies]
# Pinned to upstream Crucible v0.2.0
# (https://github.com/asymmetric-research/crucible/tree/v0.2.0).
# These path deps assume the upstream Crucible workspace lives at
# `../../../../../crucible` (i.e. a sibling of `cf-invariants-anchor/`
# under the parent dir). Adjust per your clone layout, or vendor the
# two crates. CI clones Crucible to `<repo-root>/experiments/crucible/`
# so the path resolves; see `.github/workflows/ci.yml`.
crucible-fuzzer       = { path = "../../../../../crucible/crates/crucible-fuzzer" }
crucible-test-context = { path = "../../../../../crucible/crates/crucible-test-context" }
anchor-lang = "1.0.1"
arbitrary = { version = "1", features = ["derive"] }
ctrlc = "3.4"
libafl = { version = "0.15.1", features = ["std", "cli", "prelude"] }
libafl_bolts = { version = "0.15.1", features = ["std"] }
vault_ref = { path = "../../programs/vault_ref", features = ["no-entrypoint"] }
solana-keypair = "3.0"
solana-pubkey = "3.0"
solana-signer = "3.0"

[[bin]]
name = "invariant_test"
path = "src/main.rs"

[features]
invariant_amount_conservation = []
